--- a/client/src/app/errors/test-errors/test-errors.component.html
+++ b/client/src/app/errors/test-errors/test-errors.component.html
@@ -1,18 +1,17 @@
 <div>
-    <button class="btn btn-outline-primary me-3" (click)="get400error()">400 Error</button>
-    <button class="btn btn-outline-primary me-3" (click)="get401error()">401 Error</button>
-    <button class="btn btn-outline-primary me-3" (click)="get404error()">404 Error</button>
-    <button class="btn btn-outline-primary me-3" (click)="get500error()">500 Error</button>
-    <button class="btn btn-outline-primary me-3" (click)="get400ValidationError()">400 ValidationError</button>
+    <button class="btn btn-primary me-3" (click)="get400Error()">400 Error</button>
+    <button class="btn btn-primary me-3" (click)="get401Error()">401 Error</button>
+    <button class="btn btn-primary me-3" (click)="get404Error()">404 Error</button>
+    <button class="btn btn-primary me-3" (click)="get500Error()">500 Error</button>
+    <button class="btn btn-primary me-3" (click)="get400ValidationError()">400 Validation Error</button>
 
-    @if(validationErrors.length > 0){
+    @if (validationErrors.length > 0) {
         <div class="row mt-5">
             <ul class="text-danger">
-                @for(error of validationErrors; track $index){
+                @for (error of validationErrors; track $index) {
                     <li>{{error}}</li>
                 }
             </ul>
         </div>
     }
-
 </div>
