--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
         <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
-<!--  -->
+
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
             @if (accountService.currentUser()) {
                 <li class="nav-item">
@@ -26,7 +26,7 @@
                     src="{{accountService.currentUser()?.photoUrl || './assets/user.png'}}"
                     alt="User main photo">
                 <a dropdownToggle class="dropdown-toogle text-light text-decoration-none">
-                    Welcome {{accountService.currentUser()?.username | titlecase}}
+                    Welcome {{accountService.currentUser()?.knownAs}}
                 </a>
                 <div *dropdownMenu class="dropdown-menu">
                     <a routerLink="/member/edit" class="dropdown-item">Profile</a>
