--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
         <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
-<!--  -->
+
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
             @if (accountService.currentUser()) {
                 <li class="nav-item">
@@ -12,6 +12,9 @@
                 </li>
                 <li class="nav-item">
                     <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+                </li>
+                <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
+                    <a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a>
                 </li>
             }
             <li class="nav-item">
